# RAG_Based_Research_Assistant

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FRAMEWORK.md  README.md  pyproject.toml  requirements.txt
api/: index.py
docs/: CODE_QUALITY.md  ENVIRONMENT_SETUP.md  README.md
src/: app.py  server.py  vectordb.py
src/static/: app.js  styles.css
src/templates/: index.html
